<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:minHeight="1600dp"    
>

    <RelativeLayout
        android:id="@+id/detailpanel"
        android:layout_width="590dp"
        android:layout_height="fill_parent"
        android:layout_centerHorizontal="true"
        android:background="@drawable/program_detail_bg"
        android:paddingRight="11dp" >

        <ScrollView
            android:id="@+id/detailpanelright"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/current_ch_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:layout_marginLeft="@dimen/programdetail_content_margin"
                    android:layout_marginRight="@dimen/programdetail_content_margin"
                    android:layout_marginTop="36dp"
                    android:lines="2"
                    android:text="白領公寓"
                    android:textColor="@color/programdetail_title"
                    android:textSize="@dimen/programdetail_title_size"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/program_detail_actor_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp"
                    android:visibility="gone"
                     >

                    <TextView
                        android:id="@+id/programdetail_actor_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/programdetail_content_margin"
                        android:text="演員/主持:"
                        android:textColor="@color/programdetail_label"
                        android:textSize="@dimen/programdetail_content_size"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/programdetail_actor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="斯圖爾特, 羅伯特、甄子丹"
                        android:textColor="@color/programdetail_content"
                        android:textSize="@dimen/programdetail_content_size"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/programdetail_duration_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp"
                    android:visibility="gone"
                     >

                    <TextView
                        android:id="@+id/programdetail_duration_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/programdetail_content_margin"
                        android:text="片長:"
                        android:textColor="@color/programdetail_label"
                        android:textSize="@dimen/programdetail_content_size"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/programdetail_duration"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="157分鐘"
                        android:textColor="@color/programdetail_content"
                        android:textSize="@dimen/programdetail_content_size"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/programdetail_language_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp" >

                    <TextView
                        android:id="@+id/programdetail_language_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/programdetail_content_margin"
                        android:text="@string/programdetail_language_title"
                        android:textColor="@color/programdetail_label"
                        android:textSize="@dimen/programdetail_content_size"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/programdetail_language"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/programdetail_language"
                        android:textColor="@color/programdetail_content"
                        android:textSize="@dimen/programdetail_content_size"
                        android:textStyle="bold" />
                </LinearLayout>

                <TextView
                    android:id="@+id/program_detail_synopsis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:layout_marginLeft="@dimen/programdetail_content_margin"
                    android:layout_marginRight="@dimen/programdetail_content_margin"
                    android:layout_marginTop="6dp"
                    android:text=""
                    android:textColor="@color/programdetail_content"
                    android:textSize="@dimen/programdetail_content_size"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/player_canvas"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/program_detail_episode_shadow" />

                <TextView
                    android:id="@+id/program_detail_episode_title"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/program_detail_episode_title"
                    android:textColor="@color/programdetail_content"
                    android:textSize="@dimen/programdetail_content_size_large"
                    android:textStyle="bold" />

                
                <LinearLayout 
                    android:id="@+id/programdetail_episode_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"    
                    >
                </LinearLayout>


            </LinearLayout>

        </ScrollView>

        <ImageView
            android:id="@+id/channel_logo"
            android:layout_width="102dp"
            android:layout_height="60dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="18dp"
            android:scaleType="fitCenter"
            android:src="@drawable/channel_logo" />

        <ImageView
            android:id="@+id/thumbnail_bg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/channel_logo"
            android:layout_marginRight="2dp"
            android:layout_marginTop="18dp"
            android:layout_toLeftOf="@id/detailpanelright"
            android:src="@drawable/empty_program_c" />

        <ImageView
            android:id="@+id/thumbnail"
            android:layout_width="168dp"
            android:layout_height="111dp"
            android:layout_alignLeft="@id/thumbnail_bg"
            android:layout_alignTop="@id/thumbnail_bg"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="3dp"
            android:scaleType="centerCrop"
            android:src="@drawable/_program_thumb_nail" />

<!--         <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginRight="-2dp"
            android:layout_toLeftOf="@id/detailpanelright"
            android:scaleType="fitXY"
            android:src="@drawable/program_detail_bg_shadow" /> -->

    </RelativeLayout>

</LinearLayout>